# universal-assembler

./: CMakeLists.txt  README.md  go.sh  play.sh
src/IO/: AudioWriter.cpp  SurgeXT.cpp  SurgeXT.h  VideoDecoding.cpp  VideoWriter.cpp  VideoWriter.h  Writer.cpp
src/Projects/Demos/: SurgeEffectAutomationDemo.cpp
